# trueskill

./: .gitmodules  README.md  pyproject.toml  setup.py
scripts/: benchmark.py
trueskill/: __init__.py  _fastmath.pyx  backends.py  factorgraph.py  mathematics.py
